Introduce contract verification
